k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ashiwani-personal-portfolio-frontend-service
  namespace: ashiwani-personal-portfolio
  labels:
    app: ashiwani-personal-portfolio-frontend
spec:
  type: ClusterIP
  selector:
    app: ashiwani-personal-portfolio-frontend
  ports:
  - name: http
    port: 80
    targetPort: 3302
    protocol: TCP
