k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashiwani-personal-portfolio-frontend-ingress
  namespace: ashiwani-personal-portfolio
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ashiwanikumar.com
    secretName: ashiwanikumar-tls
  rules:
  - host: ashiwanikumar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ashiwani-personal-portfolio-frontend-service
            port:
              number: 80
